Fix whitespace for <pre> tags
<pre> is quite literally rendering the (pre)trailing whitespace, which
is quite ugly when editing HTML.

Fix up for cfe8631c929b2aa85efa5dd45c4ee165eefa7ae5

--- a/css/openrazer.css
+++ b/css/openrazer.css
@@ -48,6 +48,7 @@ pre, code {
 
 pre {
     border: 1px solid #181818;
+    white-space: pre-line;
 }
 
 hr {
